src/objects/API_Log_Entry__c.object
<CustomObject>
    <description>Log Entry for access or error per API Endpoint call</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>API Endpoint that was accessed</description>
        <label>API Endpoint</label>
        <referenceTo>API_Endpoint__c</referenceTo>
        <relationshipLabel>API Log Entries</relationshipLabel>
        <relationshipName>API_Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>API_Policies_Applied__c</fullName>
        <description>Policies Applied to the API request</description>
        <label>API Policies Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>API Version that was accessed</description>
        <label>API Version</label>
        <referenceTo>API_Version__c</referenceTo>
        <relationshipLabel>API Log Entries</relationshipLabel>
        <relationshipName>API_Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Message from the Exception if this is a Error Log Entry</description>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Governors_and_Limits__c</fullName>
        <description>Execution Governors and Limits for the request</description>
        <label>Execution Governors and Limits</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <description>HTTP Method that was used to access the API</description>
        <label>HTTP Method</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This field is to help populate the Autonumber field without a SOQL Query</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Address__c</fullName>
        <description>Remote Address (IP) from the requestor</description>
        <label>Remote Address</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Headers__c</fullName>
        <description>The Request Headers present at the time of the API call</description>
        <label>Request Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Params__c</fullName>
        <description>The URI Params that the API was accessed from</description>
        <label>Request Params</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>Formula to determine if the request was a success or an error</description>
        <formula>IF( Status_Code__c &gt;= 400, &apos;Error&apos;, &apos;Success&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_URI__c</fullName>
        <description>The URI the API was accessed by</description>
        <label>Request URI</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Headers__c</fullName>
        <description>The Request Headers sent in the response</description>
        <label>Response Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace_String__c</fullName>
        <description>Stack trace string from the Exception</description>
        <label>Stack Trace String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>HTTP Response Code</description>
        <label>Status Code</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Name__c</fullName>
        <description>Exception Type Name</description>
        <label>Type Name</label>
        <type>TextArea</type>
    </fields>
    <label>API Log Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALE-{0000000}</displayFormat>
        <label>API Log Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>